<resources>
    <string name="app_name">LeagueApp</string>
    <string name="all">All</string>
    <string name="favorites">Favorites</string>
</resources>